# HuaweiRouter

./: README.md  smth
DebugServer/: CMakeLists.txt  TextureImage.cpp  TextureImage.h  channel.cpp  channel.h  graph.cpp  graph.h  icon.qrc  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  node.cpp  node.h  oglwidget.cpp  oglwidget.h  run.sh  run_with_Windows_Subsystem_For_Linux.sh  settingsform.cpp  settingsform.ui  todo.txt
DebugServer/Network/: channel.cpp  channel.h  main.cpp  network.cpp  network.h  node.h
DebugServer/SimulationCore/: DebugServer.cpp  DebugServer.h  LocalVoting.cpp  LocalVoting.h  Messages.cpp  Messages.h  SendingQueue.cpp  SendingQueue.h  ServerConnection.cpp  ServerConnection.h  ServerNode.cpp  ServerNode.h  SimulationReport.cpp  SimulationReport.h  simulation.cpp  simulation.h
DebugServer/Utils/: AsyncVar.cpp  AsyncVar.h  ColorMode.cpp  ColorMode.h  CpuInfo.cpp  CpuInfo.h  MutexBool.cpp  MutexBool.h  MutexInt.cpp  MutexInt.h  Settings.cpp  Settings.h  sout.cpp  sout.h
DebugServer/VulkanWidget/: trianglerenderer.cpp  trianglerenderer.h
